--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -21,5 +21,22 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "babel": "*",
+    "babel-jest": "*",
+    "babel-polyfill": "*",
+    "babel-preset-airbnb": "*",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "jest": "*",
+    "jest-cli": "*",
+    "react": "*",
+    "react-addons-test-utils": "*"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./config/setupTests.js"
+  }
 }
